WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70036
compile error in WebCore::WorkerContext::importScript()
https://bugs.webkit.org/show_bug.cgi?id=70036
Summary
compile error in WebCore::WorkerContext::importScript()
sanachan.y
Reported
2011-10-13 10:18:21 PDT
Created
attachment 110868
[details]
Include ExceptionCode.h instead In WebCore::WorkerContext::importScript() method, a compile error like 'SYNTAX_ERR is not defined' occurs when compile switches are set to :- - ENABLE_WORKERS=1 - ENABLE_FILE_SYSTEM=0 Include dom/ExceptionCode.h instead, like the attached candidate patch. I don't know about WebKit's commit policy so that I set commit-queue to '?'.
Attachments
Include ExceptionCode.h instead
(1.05 KB, patch)
2011-10-13 10:18 PDT
,
sanachan.y
no flags
Details
Formatted Diff
Diff
Patch2
(1.11 KB, patch)
2011-10-14 08:51 PDT
,
sanachan.y
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
WebKit Review Bot
Comment 1
2011-10-13 10:22:17 PDT
Attachment 110868
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/ChangeLog:3: Line contains tab character. [whitespace/tab] [5] Source/WebCore/ChangeLog:4: Line contains tab character. [whitespace/tab] [5] Source/WebCore/ChangeLog:5: Line contains tab character. [whitespace/tab] [5] Source/WebCore/ChangeLog:7: Line contains tab character. [whitespace/tab] [5] Source/WebCore/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] Source/WebCore/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 6 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
sanachan.y
Comment 2
2011-10-14 08:51:28 PDT
Created
attachment 111019
[details]
Patch2 improved according to the found errors by WebKit Review Bot
Darin Adler
Comment 3
2011-10-14 10:11:44 PDT
Comment on
attachment 111019
[details]
Patch2 I’d rather see an unconditional include of ExceptionCode.h instead of the #else, but this is OK.
WebKit Review Bot
Comment 4
2011-10-14 11:25:15 PDT
Comment on
attachment 111019
[details]
Patch2 Clearing flags on attachment: 111019 Committed
r97482
: <
http://trac.webkit.org/changeset/97482
>
WebKit Review Bot
Comment 5
2011-10-14 11:25:19 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug