Include dom/ExceptionCode.h instead of Filesystem APIs headers to fix compile error when ENABLE_WORKERS=1 and ENABLE_FILE_SYSTEM=0 https://bugs.webkit.org/show_bug.cgi?id=70036

Patch by Yuji Sanachan <sanachan.y@gmail.com> on 2011-10-14
Reviewed by Darin Adler.

* workers/WorkerContext.cpp:
(WebCore::WorkerContext::importScript):

Canonical link: https://commits.webkit.org/86211@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97482 268f45cc-cd09-0410-ab3c-d52691b4dbfc